client/src/components/SalaryComponent/styles.scss
@import "../../styles/variables.scss";
@import "../../styles/placeholders.scss";
@import "styles/mixins.scss";

.ui.table {
  th.salary-header {
    @extend %table-header;
  }
}

.salary-container {
  display: none !important
}

.salary-body {
  td {
    width: 201px;
  }

  i {
    padding-left: 4px;
  }
}

